# audio-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: complex.c  complex.h  fft.c  fft.h  main.c  mp3.c  mp3.h  visualizer.c  visualizer.h
